--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,28 @@ ul {
     list-style-type: none;
     padding: 0;
 }
+
+li {
+    background-color: #eeeeee;
+    margin-top: 8px;
+    padding: 10px;
+    border-radius: 4px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.remove-btn {
+    cursor: pointer;
+    background-color: #ff6347;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 5px 10px;
+}
+
+.remove-btn:hover {
+    background-color: #d9534f;
+}
+
+
